# aoc2024

./: Cargo.toml
src/: io.rs  lib.rs  template.rs  vector2d.rs
src/aoc/: grid.rs  lib.rs  vector2d.rs
src/common/: lib.rs
src/day1/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs
src/day8/: main.rs
